Disable date detection by default

--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -78,6 +78,11 @@ Closure setupTwitter = { String name, int count ->
         settings:
           number_of_shards: 1
           number_of_replicas: 1
+        mappings:
+          tweet:
+            properties:
+              date:
+                type: date
   - do:
     bulk:
       index: twitter
@@ -130,6 +135,9 @@ buildRestTests.setups['ledger'] = '''
                 type: keyword
               amount:
                 type: double
+              date:
+                type: date
+                format: yyyy/MM/dd HH:mm:ss
   - do:
     bulk:
       index: ledger
@@ -161,6 +169,9 @@ buildRestTests.setups['sales'] = '''
             properties:
               type:
                 type: keyword
+              date:
+                type: date
+                format: yyyy/MM/dd HH:mm:ss
   - do:
     bulk:
       index: sales
